# text-fabric-mcp

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml  system_prompt.md  system_prompt_quiz.md
src/text_fabric_mcp/: api.py  cf_engine.py  chat.py  models.py  quiz_engine.py  quiz_models.py  server.py  tf_engine.py
src/text_fabric_mcp/tools/: passage.py  quiz.py  schema.py  search.py  vocab.py
tests/: test_api.py  test_cf_engine.py  test_quiz.py  test_tf_engine.py
